manifests/ingress/caddy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caddy-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: caddy
spec:
  rules:
  - host: geoserver1.prahounakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
              name: geoserver
              port:
                number: 8080
  - host: mapa-test.prahounakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
              name: mapa-test
              port:
                number: 8000
  - host: mapa.prahounakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
         service:
              name: mapa
              port:
                number: 8000
  - host: klub.prahounakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
         service:
              name: klub-automat
              port:
                number: 8000
  - host: automat.klub-pratel.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
         service:
              name: klub-automat
              port:
                number: 8000
  - host: klub.auto-mat.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
         service:
              name: klub-automat
              port:
                number: 8000
  - host: test.klub-pratel.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
         service:
              name: klub-test
              port:
                number: 8000
  - host: klub-zmj-test.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
         service:
              name: klub-zmj-test
              port:
                number: 8000
  - host: automat.passbolt.klub-pratel.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
         service:
              name: passbolt
              port:
                number: 80
  - host: breclav.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: brno.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: budejovice.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: hradec.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: jablonec.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: jihlava.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: jindrichuv-hradec.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: karvina.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: liberec.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: olomouc.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: opava.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: ostrava.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: otrokovice.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: pardubice.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: plzen.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: prerov.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: hradiste.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: usti.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: zlin.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: limesurvey.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: limesurvey
            port:
                number: 3000
  - host: embedded-map.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: embedded-map
            port:
                number: 80
  - host: embedded-map-test.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: embedded-map-test
            port:
                number: 80
  - host: dpnk2019.dopracenakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk-test
            port:
                number: 8000
  - host: test.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ride-to-work-by-bike-backend-test
            port:
                number: 8000
  - host: testleden2019.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ride-to-work-by-bike-backend-test
            port:
                number: 8000
  - host: testdpnk2026.dopracenakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk-test
            port:
                number: 8000
  - host: testdpnkzari2026.dopracenakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk-test
            port:
                number: 8000
  - host: leden2022.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: dpnk2015.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: dpnk2016.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: dpnk2017.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: dpnk2018.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: dpnk2019.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: dpnk2020.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: dpnk2021.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: dpnk2022.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: dpnk2023.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: dpnk2024.dopracenakole.net
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: dpnk
              port:
                number: 8000
  - host: vyzva2023.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: vyzva2022.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: leden2023.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: leden2024.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: leden2025.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: leden2026.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: bank.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: dpnk.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  # - host: dpnk.dopracenakole.fun
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/"
  #       backend:
  #         service:
  #           name: caddy-dpnk-automat-staff
  #           port:
  #               number: 80
  - host: dpnk.dopracenakole.fun
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk-automat-staff
            port:
                number: 8000
  - host: selenium-hub.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: selenium-hub
            port:
                number: 4444
  - host: metabase.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: metabase
            port:
                number: 3000
  - host: mnk-osm-tiles.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mnk-rendering
            port:
                number: 80
  - host: tiles.prahounakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mnk-rendering
            port:
                number: 80
  - host: rtwbb-test.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ride-to-work-by-bike-frontend-test
            port:
                number: 80
  - host: dpnk.dopracenakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ride-to-work-by-bike-frontend-production
            port:
                number: 80
  - host: gisquick.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gisquick-caddy
            port:
                number: 80
  - host: www.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: caddy
            port:
                number: 80
  - host: mapserver.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapserver
            port:
                number: 80
  - host: mnk-gisquick.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mnk-gisquick-caddy
            port:
                number: 80
  - host: comments-app.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mnk-gisquick-comments-app
            port:
                number: 3000
  - host: bugzilla.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bugzilla
            port:
                number: 80
  - host: ced-test.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: city-experience-differently-frontend-test
            port:
                number: 80
  - host: matomo.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: matomo
            port:
                number: 80
