manifests/ingress/nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ngnix-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 40m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  tls:
  - hosts:
    - geoserver1.prahounakole.cz
    - mapa.prahounakole.cz
    - klub.prahounakole.cz
    - klub.auto-mat.cz
    - automat.passbolt.klub-pratel.cz
    - automat.klub-pratel.cz
    - test.klub-pratel.cz
    - investigace.klub-pratel.cz
    - test.dopracenakole.cz
    - dpnk.dopracenakole.cz
    - dpnk2021.dopracenakole.cz
    - dpnk2020.dopracenakole.cz
    - dpnk2019.dopracenakole.cz
    - dpnk2018.dopracenakole.cz
    - dpnk2017.dopracenakole.cz
    - dpnk2016.dopracenakole.cz
    - dpnk2015.dopracenakole.cz
    - leden2022.dopracenakole.cz
    - dpnk2022.dopracenakole.cz
    - bank.dopracenakole.cz
    - mapa-test.prahounakole.cz
    - breclav.dopracenakole.net
    - brno.dopracenakole.net
    - budejovice.dopracenakole.net
    - hradec.dopracenakole.net
    - jablonec.dopracenakole.net
    - jablonec.dopracenakole.net
    - jindrichuv-hradec.dopracenakole.net
    - jihlava.dopracenakole.net
    - karvina.dopracenakole.net
    - liberec.dopracenakole.net
    - olomouc.dopracenakole.net
    - opava.dopracenakole.net
    - ostrava.dopracenakole.net
    - otrokovice.dopracenakole.net
    - pardubice.dopracenakole.net
    - plzen.dopracenakole.net
    - prerov.dopracenakole.net
    - hradiste.dopracenakole.net
    - usti.dopracenakole.net
    - zlin.dopracenakole.net
    - limesurvey.dopracenakole.net
    - embedded-map.dopracenakole.net
    - embedded-map-test.dopracenakole.net
    - selenium-hub.dopracenakole.net
    - metabase.dopracenakole.net
    - mnk-osm-tiles.dopracenakole.net
    secretName: ngnix-kubernetes-tls-2
  rules:
  - host: geoserver1.prahounakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
              name: geoserver
              port:
                number: 8080
  - host: mapa-test.prahounakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
              name: mapa-test
              port:
                number: 8000
  - host: mapa.prahounakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
         service:
              name: mapa
              port:
                number: 8000
  - host: klub.prahounakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
         service:
              name: klub-automat
              port:
                number: 8000
  - host: automat.klub-pratel.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
         service:
              name: klub-automat
              port:
                number: 8000
  - host: investigace.klub-pratel.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
         service:
              name: investigace-automat
              port:
                number: 8000
  - host: klub.auto-mat.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
         service:
              name: klub-automat
              port:
                number: 8000
  - host: test.klub-pratel.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
         service:
              name: klub-test
              port:
                number: 8000
  - host: automat.passbolt.klub-pratel.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
         service:
              name: passbolt
              port:
                number: 80
  - host: breclav.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: brno.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: budejovice.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: hradec.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: jablonec.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: jihlava.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: jindrichuv-hradec.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: karvina.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: liberec.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: olomouc.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: opava.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: ostrava.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: otrokovice.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: pardubice.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: plzen.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: prerov.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: hradiste.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: usti.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: zlin.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mapa
            port:
                number: 8000
  - host: limesurvey.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: limesurvey
            port:
                number: 80
  - host: embedded-map.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: embedded-map
            port:
                number: 80
  - host: embedded-map-test.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: embedded-map-test
            port:
                number: 80
  - host: test.dopracenakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk-test
            port:
                number: 8000
  - host: leden2022.dopracenakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: dpnk2015.dopracenakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: dpnk2016.dopracenakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: dpnk2017.dopracenakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: dpnk2018.dopracenakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: dpnk2019.dopracenakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: dpnk2020.dopracenakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: dpnk2021.dopracenakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: dpnk2022.dopracenakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: bank.dopracenakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: dpnk.dopracenakole.cz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dpnk
            port:
                number: 8000
  - host: selenium-hub.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: selenium-hub
            port:
                number: 4444
  - host: metabase.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: metabase
            port:
                number: 3000
  - host: mnk-osm-tiles.dopracenakole.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mnk-rendering
            port:
                number: 80
