manifests/ingress/ngnix.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ngnix-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 40m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  tls:
  - hosts:
    - geoserver1.prahounakole.cz
    - mapa.prahounakole.cz
    - klub.prahounakole.cz
    - klub.auto-mat.cz
    - automat.passbolt.klub-pratel.cz
    - automat.nocodb.klub-pratel.cz
    - automat.klub-pratel.cz
    - diakonie.klub-pratel.cz
    - investigace.klub-pratel.cz
    - test.klub-pratel.cz
    - brontosaurus.klub-pratel.cz
    - crm.diakonie.cz
    - test.dopracenakole.cz
    - dpnk.dopracenakole.cz
    - dpnk2021.dopracenakole.cz
    - dpnk2020.dopracenakole.cz
    - dpnk2019.dopracenakole.cz
    - dpnk2018.dopracenakole.cz
    - dpnk2017.dopracenakole.cz
    - dpnk2016.dopracenakole.cz
    - dpnk2015.dopracenakole.cz
    - leden2022.dopracenakole.cz
    - mapa-test.prahounakole.cz
    - breclav.dopracenakole.net
    - brno.dopracenakole.net
    - budejovice.dopracenakole.net
    - hradec.dopracenakole.net
    - jablonec.dopracenakole.net
    - jablonec.dopracenakole.net
    - jindrichuv-hradec.dopracenakole.net
    - jihlava.dopracenakole.net
    - karvina.dopracenakole.net
    - liberec.dopracenakole.net
    - olomouc.dopracenakole.net
    - opava.dopracenakole.net
    - ostrava.dopracenakole.net
    - otrokovice.dopracenakole.net
    - pardubice.dopracenakole.net
    - plzen.dopracenakole.net
    - prerov.dopracenakole.net
    - hradiste.dopracenakole.net
    - usti.dopracenakole.net
    - zlin.dopracenakole.net
    - limesurvey.dopracenakole.net
    - embedded-map.dopracenakole.net
    - embedded-map-test.dopracenakole.net
    - selenium-hub.dopracenakole.net
    - metabase.dopracenakole.net
    - mnk-osm-tiles.dopracenakole.net
    secretName: ngnix-kubernetes-tls-2
  rules:
  - host: geoserver1.prahounakole.cz
    http:
      paths:
      - backend:
          serviceName: geoserver
          servicePort: 8080
  - host: mapa-test.prahounakole.cz
    http:
      paths:
      - backend:
          serviceName: mapa-test
          servicePort: 8000
  - host: mapa.prahounakole.cz
    http:
      paths:
      - backend:
          serviceName: mapa
          servicePort: 8000
  - host: klub.prahounakole.cz
    http:
      paths:
      - backend:
          serviceName: klub-automat
          servicePort: 8000
  - host: automat.klub-pratel.cz
    http:
      paths:
      - backend:
          serviceName: klub-automat
          servicePort: 8000
  - host: klub.auto-mat.cz
    http:
      paths:
      - backend:
          serviceName: klub-automat
          servicePort: 8000
  - host: diakonie.klub-pratel.cz
    http:
      paths:
      - backend:
          serviceName: klub-diakonie
          servicePort: 8000
  - host: investigace.klub-pratel.cz
    http:
      paths:
      - backend:
          serviceName: klub-investigace
          servicePort: 8000
  - host: crm.diakonie.cz
    http:
      paths:
      - backend:
          serviceName: klub-diakonie
          servicePort: 8000
  - host: brontosaurus.klub-pratel.cz
    http:
      paths:
      - backend:
          serviceName: klub-brontosaurus
          servicePort: 8000
  - host: test.klub-pratel.cz
    http:
      paths:
      - backend:
          serviceName: klub-test
          servicePort: 8000
  - host: automat.passbolt.klub-pratel.cz
    http:
      paths:
      - backend:
          serviceName: passbolt
          servicePort: 80
  - host: automat.nocodb.klub-pratel.cz
    http:
      paths:
      - backend:
          serviceName: nocodb
          servicePort: 8080
  - host: breclav.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: mapa
          servicePort: 8000
  - host: brno.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: mapa
          servicePort: 8000
  - host: budejovice.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: mapa
          servicePort: 8000
  - host: hradec.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: mapa
          servicePort: 8000
  - host: jablonec.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: mapa
          servicePort: 8000
  - host: jihlava.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: mapa
          servicePort: 8000
  - host: jindrichuv-hradec.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: mapa
          servicePort: 8000
  - host: karvina.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: mapa
          servicePort: 8000
  - host: liberec.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: mapa
          servicePort: 8000
  - host: olomouc.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: mapa
          servicePort: 8000
  - host: opava.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: mapa
          servicePort: 8000
  - host: ostrava.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: mapa
          servicePort: 8000
  - host: otrokovice.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: mapa
          servicePort: 8000
  - host: pardubice.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: mapa
          servicePort: 8000
  - host: plzen.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: mapa
          servicePort: 8000
  - host: prerov.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: mapa
          servicePort: 8000
  - host: hradiste.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: mapa
          servicePort: 8000
  - host: usti.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: mapa
          servicePort: 8000
  - host: zlin.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: mapa
          servicePort: 8000
  - host: limesurvey.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: limesurvey
          servicePort: 80
  - host: embedded-map.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: embedded-map
          servicePort: 80
  - host: embedded-map-test.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: embedded-map-test
          servicePort: 80
  - host: test.dopracenakole.cz
    http:
      paths:
      - backend:
          serviceName: dpnk-test
          servicePort: 8000
  - host: leden2022.dopracenakole.cz
    http:
      paths:
      - backend:
          serviceName: dpnk
          servicePort: 8000
  - host: dpnk2015.dopracenakole.cz
    http:
      paths:
      - backend:
          serviceName: dpnk
          servicePort: 8000
  - host: dpnk2016.dopracenakole.cz
    http:
      paths:
      - backend:
          serviceName: dpnk
          servicePort: 8000
  - host: dpnk2017.dopracenakole.cz
    http:
      paths:
      - backend:
          serviceName: dpnk
          servicePort: 8000
  - host: dpnk2018.dopracenakole.cz
    http:
      paths:
      - backend:
          serviceName: dpnk
          servicePort: 8000
  - host: dpnk2019.dopracenakole.cz
    http:
      paths:
      - backend:
          serviceName: dpnk
          servicePort: 8000
  - host: dpnk2020.dopracenakole.cz
    http:
      paths:
      - backend:
          serviceName: dpnk
          servicePort: 8000
  - host: dpnk2021.dopracenakole.cz
    http:
      paths:
      - backend:
          serviceName: dpnk
          servicePort: 8000
  - host: dpnk.dopracenakole.cz
    http:
      paths:
      - backend:
          serviceName: dpnk
          servicePort: 8000
  - host: selenium-hub.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: selenium-hub
          servicePort: 4444
  - host: metabase.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: metabase
          servicePort: 3000
  - host: mnk-osm-tiles.dopracenakole.net
    http:
      paths:
      - backend:
          serviceName: mnk-rendering
          servicePort: 80
